--- a/.github/workflows/publish-csharp.yml
+++ b/.github/workflows/publish-csharp.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Update package version
         if: ${{ inputs.package-version }}
         working-directory: lib/bindings/langs/csharp/src
-        run: sed -i.bak -e 's/<Version>.*<\/Version>/<Version>${{ inputs.package-version }}<\/Version>/' Breez.Liquid.Sdk.csproj
+        run: sed -i.bak -e 's/<Version>.*<\/Version>/<Version>${{ inputs.package-version }}<\/Version>/' Breez.Sdk.Liquid.csproj
 
       - name: Setup dotnet
         uses: actions/setup-dotnet@v3
@@ -86,17 +86,17 @@ jobs:
 
       - name: Build the project
         working-directory: lib/bindings/langs/csharp/src
-        run: dotnet build Breez.Liquid.Sdk.csproj
+        run: dotnet build Breez.Sdk.Liquid.csproj
 
       - name: Create the package
         working-directory: lib/bindings/langs/csharp/src
-        run: dotnet pack --configuration Release Breez.Liquid.Sdk.csproj
+        run: dotnet pack --configuration Release Breez.Sdk.Liquid.csproj
 
       - name: Archive the package
         uses: actions/upload-artifact@v4
         with:
-          name: Breez.Liquid.Sdk.${{ inputs.package-version || '0.0.1' }}.nupkg
-          path: lib/bindings/langs/csharp/src/bin/Release/Breez.Liquid.Sdk.*.nupkg
+          name: Breez.Sdk.Liquid.${{ inputs.package-version || '0.0.1' }}.nupkg
+          path: lib/bindings/langs/csharp/src/bin/Release/Breez.Sdk.Liquid.*.nupkg
 
   test-package:
     needs: build-package
@@ -120,7 +120,7 @@ jobs:
       - uses: actions/download-artifact@v4
         if: ${{ !inputs.skip-tests }}
         with:
-          name: Breez.Liquid.Sdk.${{ inputs.package-version || '0.0.1' }}.nupkg
+          name: Breez.Sdk.Liquid.${{ inputs.package-version || '0.0.1' }}.nupkg
           path: lib/bindings/langs/csharp/src/bin/Release
 
       - name: Setup dotnet
@@ -142,9 +142,9 @@ jobs:
       - name: Download archived package
         uses: actions/download-artifact@v4
         with:
-          name: Breez.Liquid.Sdk.${{ inputs.package-version }}.nupkg
+          name: Breez.Sdk.Liquid.${{ inputs.package-version }}.nupkg
 
       - name: Publish to nuget.org
         env:
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-        run: dotnet nuget push Breez.Liquid.Sdk.${{ inputs.package-version }}.nupkg --api-key "$NUGET_API_KEY" --source https://api.nuget.org/v3/index.json
+        run: dotnet nuget push Breez.Sdk.Liquid.${{ inputs.package-version }}.nupkg --api-key "$NUGET_API_KEY" --source https://api.nuget.org/v3/index.json
