feat: add bip21 support for send/receive
feat: add receive support and improve send

fix: fixing send interface

feat: finish receive interface

feat: set LNInvoice in PayDestination

fix: rename `PayDestination` to `SendDestination`

fix: remove `ReceiveDestination` for string

fix: remove `ReceiveMethod`

fead: add `message` field to BIP21

feat: add BIP21 support to CLI

fix: rename `prepare_res` to `prepare_response` globally

fix: specify fees as const to improve clarity

fix: remove import from `sdk_common::prelude`

fix: remove custom path from ffigen

feat: finalize model and unify receive methods

fix: fixing nits

fix: include network check in `prepare_send`

fix: generate bindings for sdk-common

feat: isolate bip21 parsing/serializing to sdk-common

feat: update Payment fields to match bip21 changes

fix: regenerate bindings

Update Dart example app

Update Payment on udl file

chore: run 'make all' on 'packages/react-native/'

feat: add `PaymentDetails` definition

fix: rename to `InvalidNetwork`

doc: update documentation

fix: remove llvm path definition from ffigen

fix: revert `amount_sat` to `payer_amount_sat`

fix: create table to store payment details

fix: remove description field from Payment

fix: fix flutter example and RN bindings

fix: fixing nits

fix: rename `amount_sat` to `payer_amount_sat` in
`PrepareReceiveRequest`

fix: rn

fix: nits

--- a/lib/bindings/langs/android/.gitignore
+++ b/lib/bindings/langs/android/.gitignore
@@ -45,4 +45,5 @@ gen-external-apklibs
 # End of https://www.toptal.com/developers/gitignore/api/android
 
 lib/src/main/jniLibs/
+lib/src/main/kotlin/breez_sdk_liquid.kt
 lib/src/main/kotlin/breez_sdk_liquid/breez_sdk_liquid.kt
