Add webhook status include lists

--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -14,7 +14,7 @@ frb = ["dep:flutter_rust_bridge"]
 [dependencies]
 anyhow = { workspace = true }
 bip39 = "2.0.0"
-boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "d666868b5b36fab5ebb4cffc600c64a8017b092b" }
+boltz-client = { git = "https://github.com/dangeross/boltz-rust", branch = "savage-breez-20240806" }
 chrono = "0.4"
 env_logger = "0.11"
 flutter_rust_bridge = { version = "=2.2.0", features = ["chrono"], optional = true }
