Downgrade Flutter to 3.22.3
Downgrade Flutter to 3.22.3 until resource linking issue is resolved on Android release builds with 3.24

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -149,6 +149,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: stable
+          flutter-version: 3.22.3 # Pinned until resource linking issues on Android is resolved with 3.24
       - run: flutter --version
 
       - name: Set up just
