--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -46,6 +46,7 @@ async-trait = "0.1.80"
 hex = "0.4"
 reqwest = { version = "=0.11.20", features = ["json"] }
 electrum-client = { version = "0.19.0" }
+zbase32 = "0.1.2"
 
 [dev-dependencies]
 lazy_static = "1.5.0"
