Add just recipe to update version number on podspec files & Cmake scripts

--- a/lib/bindings/langs/flutter/justfile
+++ b/lib/bindings/langs/flutter/justfile
@@ -87,6 +87,10 @@ init *args:
 init-sdk:
 	brew install protobuf
 
+# Update version number on podspec files & CMake scripts
+version:
+	bash scripts/version.sh
+
 # (melos) Generate docs for packages in workspace
 docs:
 	melos docs
