Add copy script to packages/react-native makefile
Reorder scripts

--- a/packages/react-native/makefile
+++ b/packages/react-native/makefile
@@ -8,11 +8,18 @@ clean:
 
 all: android ios react-native
 
+copy: android-copy ios-copy react-native-copy
+
 react-native:
 	make -C ../../lib/bindings react-native
+	make react-native-copy
+
+react-native-copy:
 	cp -r ../../lib/bindings/langs/react-native/android/* android/
 	cp -r ../../lib/bindings/langs/react-native/ios/* ios/
 	cp -r ../../lib/bindings/langs/react-native/ts/src/* src/
+
+android: android-make android-copy
 
 android-make:
 	make -C ../../lib/bindings android
@@ -28,7 +35,7 @@ android-copy:
 	cp ../../lib/bindings/ffi/kotlin/jniLibs/arm64-v8a/libbreez_sdk_liquid_bindings.so android/src/main/jniLibs/arm64-v8a/libbreez_sdk_liquid_bindings.so
 	cp ../../lib/bindings/ffi/kotlin/jniLibs/armeabi-v7a/libbreez_sdk_liquid_bindings.so android/src/main/jniLibs/armeabi-v7a/libbreez_sdk_liquid_bindings.so
 
-android: android-make android-copy
+ios: ios-make ios-copy
 
 ios-make:
 	make -C ../../lib/bindings bindings-swift
@@ -37,5 +44,3 @@ ios-copy:
 	rm -rf ios/bindings-swift
 	cp -r ../../lib/bindings/langs/swift ios/bindings-swift
 	rm -f ios/bindings-swift/Package.swift
-
-ios: ios-make ios-copy
