--- a/packages/react-native/example/package.json
+++ b/packages/react-native/example/package.json
@@ -13,7 +13,7 @@
     "rebuild": "rm -rf node_modules && yarn && yarn pods"
   },
   "dependencies": {
-    "@breeztech/react-native-breez-sdk-liquid": "0.2.1",
+    "@breeztech/react-native-breez-sdk-liquid": "0.2.2-dev9",
     "@dreson4/react-native-quick-bip39": "^0.0.5",
     "react": "18.1.0",
     "react-native": "0.70.15",
