Publish Go/CS packages

--- a/.github/workflows/publish-all-platforms.yml
+++ b/.github/workflows/publish-all-platforms.yml
@@ -191,23 +191,23 @@ jobs:
       python: ${{ needs.setup.outputs.python == 'true'}}
       swift: ${{ needs.setup.outputs.swift == 'true'}}
 
-#  publish-csharp:
-#    needs:
-#      - setup
-#      - build-bindings-windows
-#      - build-bindings-darwin
-#      - build-bindings-linux
-#      - build-language-bindings
-#    if: ${{ needs.setup.outputs.csharp == 'true' }}
-#    uses: ./.github/workflows/publish-csharp.yml
-#    with:
-#      repository: ${{ needs.setup.outputs.repository }}
-#      ref: ${{ needs.setup.outputs.csharp-ref }}
-#      package-version: ${{ needs.setup.outputs.csharp-package-version }}
-#      publish: ${{ needs.setup.outputs.publish == 'true' }}
-#      skip-tests: true
-#    secrets:
-#      NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+  publish-csharp:
+    needs:
+      - setup
+      - build-bindings-windows
+      - build-bindings-darwin
+      - build-bindings-linux
+      - build-language-bindings
+    if: ${{ needs.setup.outputs.csharp == 'true' }}
+    uses: ./.github/workflows/publish-csharp.yml
+    with:
+      repository: ${{ needs.setup.outputs.repository }}
+      ref: ${{ needs.setup.outputs.csharp-ref }}
+      package-version: ${{ needs.setup.outputs.csharp-package-version }}
+      publish: ${{ needs.setup.outputs.publish == 'true' }}
+      skip-tests: true
+    secrets:
+      NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
     
   publish-dart:
     needs:
@@ -221,23 +221,23 @@ jobs:
       publish: ${{ needs.setup.outputs.publish == 'true' }}
     secrets:
       REPO_SSH_KEY: ${{ secrets.REPO_SSH_KEY }}
-#
-#  publish-golang:
-#    needs:
-#      - setup
-#      - build-bindings-android
-#      - build-bindings-windows
-#      - build-bindings-darwin
-#      - build-bindings-linux
-#      - build-language-bindings
-#    if: ${{ needs.setup.outputs.golang == 'true' }}
-#    uses: ./.github/workflows/publish-golang.yml
-#    with:
-#      ref: ${{ needs.setup.outputs.ref }}
-#      package-version: ${{ needs.setup.outputs.golang-package-version }}
-#      publish: ${{ needs.setup.outputs.publish == 'true' }}
-#    secrets:
-#      REPO_SSH_KEY: ${{ secrets.REPO_SSH_KEY }}
+  
+  publish-golang:
+    needs:
+      - setup
+      - build-bindings-android
+      - build-bindings-windows
+      - build-bindings-darwin
+      - build-bindings-linux
+      - build-language-bindings
+    if: ${{ needs.setup.outputs.golang == 'true' }}
+    uses: ./.github/workflows/publish-golang.yml
+    with:
+      ref: ${{ needs.setup.outputs.ref }}
+      package-version: ${{ needs.setup.outputs.golang-package-version }}
+      publish: ${{ needs.setup.outputs.publish == 'true' }}
+    secrets:
+      REPO_SSH_KEY: ${{ secrets.REPO_SSH_KEY }}
   
   publish-maven:
     needs:
