--- a/packages/react-native/example/package.json
+++ b/packages/react-native/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-breez-sdk-liquid-example",
-  "version": "0.2.2-dev17",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "clean": "rm -rf /tmp/metro-* && yarn start --reset-cache",
@@ -13,7 +13,7 @@
     "rebuild": "rm -rf node_modules && yarn && yarn pods"
   },
   "dependencies": {
-    "@breeztech/react-native-breez-sdk-liquid": "0.2.2-dev17",
+    "@breeztech/react-native-breez-sdk-liquid": "0.3.0",
     "@dreson4/react-native-quick-bip39": "^0.0.5",
     "react": "18.1.0",
     "react-native": "0.70.15",
