Add build SDK bindings scripts for flutter

--- a/lib/bindings/langs/flutter/justfile
+++ b/lib/bindings/langs/flutter/justfile
@@ -16,6 +16,7 @@ bootstrap frb='true' build='false':
 	@if {{build}} == true; then just build; fi
 	@if {{build}} == true; then melos build; fi
 	@if {{build}} == true; then just link; fi
+	@if {{build}} == true; then just build-bindings; fi	
 	just check
 
 # Install flutter_rust_bridge_codegen dependencies
@@ -53,6 +54,16 @@ build-android profile='frb-min':
 
 build-other profile='frb-min':
 	dart scripts/build_other.dart --profile {{profile}}
+
+build-bindings:
+	just build-bindings-android
+	just build-bindings-swift
+
+build-bindings-android:
+	bash scripts/build_bindings_android.sh
+
+build-bindings-swift:
+	bash scripts/build_bindings_swift.sh
 
 # (melos) Run tests on packages in workspace
 test build='false':
