--- a/packages/flutter/pubspec.yaml
+++ b/packages/flutter/pubspec.yaml
@@ -44,8 +44,11 @@ flutter:
   plugin:
     platforms:
       android:
+        package: com.breez.breez_sdk_liquid
+        pluginClass: BreezSDKLiquidPlugin
         ffiPlugin: true
       ios:
+        pluginClass: BreezSDKLiquidPlugin
         ffiPlugin: true
       linux:
         ffiPlugin: true
