--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -17,9 +17,7 @@ bip39 = "2.0.0"
 boltz-client = { git = "https://github.com/hydra-yse/boltz-rust", branch = "yse-fee-calculation" }
 chrono = "0.4"
 env_logger = "0.11"
-flutter_rust_bridge = { version = "=2.3.0", features = [
-  "chrono",
-], optional = true }
+flutter_rust_bridge = { version = "=2.3.0", features = ["chrono"], optional = true }
 log = { workspace = true }
 lwk_common = "0.7.0"
 lwk_signer = "0.7.0"
@@ -27,9 +25,7 @@ lwk_wollet = { git = "https://github.com/dangeross/lwk", branch = "savage-try-he
 #lwk_wollet = "0.7.0"
 rusqlite = { version = "0.31", features = ["backup", "bundled"] }
 rusqlite_migration = "1.0"
-sdk-common = { git = "https://github.com/breez/breez-sdk", branch = "main", features = [
-  "liquid",
-] }
+sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "778fc290c9c02ec7529968fd74d4b6adf74a6123", features = ["liquid"]}
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.116"
 strum = "0.25"
