--- a/.github/workflows/publish-flutter.yml
+++ b/.github/workflows/publish-flutter.yml
@@ -60,6 +60,7 @@ jobs:
           rm -rf lib
           cp -r ../build/packages/flutter/android .
           cp -r ../build/packages/flutter/ios .
+          cp -r ../build/lib/bindings/langs/swift/Sources ios/
           mv android/build.gradle.production android/build.gradle
           mv ios/flutter_breez_liquid.podspec.production ios/flutter_breez_liquid.podspec
           cp -r ../build/packages/flutter/lib .
@@ -74,6 +75,11 @@ jobs:
           cp ../build/packages/flutter/CHANGELOG.md . || true
           cp ../build/packages/flutter/LICENSE . || true
           cp ../build/packages/flutter/README.md . || true
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: bindings-swift
+          path: dist/ios/Sources/BreezSDKLiquid/
 
       - name: Set package version
         working-directory: dist
