--- a/packages/flutter/android/build.gradle
+++ b/packages/flutter/android/build.gradle
@@ -1,6 +1,6 @@
-version '0.3.4' // generated; do not edit
+version '0.3.5-dev1' // generated; do not edit
 group 'com.example.flutter_breez_liquid'
-version '0.3.4'
+version '0.3.5-dev1'
 
 buildscript {
     ext.kotlin_version = '1.8.20'
