--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 # symlink headers
 packages/flutter/ios/Classes/breez_sdk_liquid.h
 packages/flutter/macos/Classes/breez_sdk_liquid.h
+packages/flutter/ios/Classes/breez_sdk_liquidFFI.h
+packages/flutter/macos/Classes/breez_sdk_liquidFFI.h
 # Miscellaneous
 .DS_Store
 .idea/
