--- a/packages/dart/pubspec.yaml
+++ b/packages/dart/pubspec.yaml
@@ -26,4 +26,5 @@ dependencies:
   ffi: ^2.1.2
   flutter_rust_bridge: 2.3.0
   freezed_annotation: ^2.4.1
+  logging: ^1.2.0
   meta: ^1.12.0 # meta is pinned to version 1.12.0 by integration_test from the flutter SDK.
