--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -49,6 +49,8 @@ hex = "0.4"
 reqwest = { version = "=0.11.20", features = ["json"] }
 electrum-client = { version = "0.19.0" }
 zbase32 = "0.1.2"
+tonic = { version = "0.12.3", features = ["tls"] }
+prost = "0.13.3"
 
 [dev-dependencies]
 lazy_static = "1.5.0"
@@ -59,6 +61,7 @@ uuid = { version = "1.8.0", features = ["v4"] }
 [build-dependencies]
 anyhow = { version = "1.0.79", features = ["backtrace"] }
 glob = "0.3.1"
+tonic-build = "0.12.3"
 
 # Pin these versions to fix iOS build issues
 [target.'cfg(target_os = "ios")'.build-dependencies]
