--- a/.github/workflows/publish-flutter.yml
+++ b/.github/workflows/publish-flutter.yml
@@ -95,11 +95,15 @@ jobs:
           sed -i.bak -e "s/^version .*/version '${{ inputs.package-version }}'/" android/build.gradle
           sed -i.bak -e 's/set(TagName.*/set(TagName "v${{ inputs.package-version }}")/' android/CMakeLists.txt
           sed -i.bak -e "s/^version = .*/version = '${{ inputs.package-version }}'/" ios/flutter_breez_liquid.podspec
+          sed -i.bak -e "s/^version = .*/version = '${{ inputs.package-version }}'/" macos/flutter_breez_liquid.podspec
+          sed -i.bak -e "s/^version = .*/version = '${{ inputs.package-version }}'/" macos/flutter_breez_liquid.podspec.production
           rm pubspec.yaml.bak
           rm pubspec_overrides.yaml.bak
           rm android/build.gradle.bak
           rm android/CMakeLists.txt.bak
           rm ios/flutter_breez_liquid.podspec.bak
+          rm macos/flutter_breez_liquid.podspec.bak
+          rm macos/flutter_breez_liquid.podspec.production.bak
       
       - name: Update version number on podspec files & CMake scripts
         working-directory: build/lib/bindings/langs/flutter/
