--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -51,6 +51,7 @@ x509-parser = { version = "0.16.0" }
 tempfile = "3"
 tonic = { version = "0.12.3", features = ["tls"] }
 prost = "0.13.3"
+ecies = "0.2.7"
 
 [dev-dependencies]
 lazy_static = "1.5.0"
