--- a/packages/react-native/example/package.json
+++ b/packages/react-native/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-breez-sdk-liquid-example",
-  "version": "0.3.4",
+  "version": "0.3.5-dev2",
   "private": true,
   "scripts": {
     "clean": "rm -rf /tmp/metro-* && yarn start --reset-cache",
