Add API key to RN example

--- a/packages/react-native/example/ios/BreezSDKLiquidExample/Info.plist
+++ b/packages/react-native/example/ios/BreezSDKLiquidExample/Info.plist
@@ -51,5 +51,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>BREEZ_API_KEY</key>
+	<string>${BREEZ_API_KEY}</string>
 </dict>
 </plist>
