--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -42,5 +42,5 @@ thiserror = "1.0"
 uniffi = "0.25.0"
 
 [patch.crates-io]
-# https://github.com/BlockstreamResearch/rust-secp256k1-zkp/pull/48/commits
-secp256k1-zkp = {git = "https://github.com/sanket1729/rust-secp256k1-zkp.git", rev = "60e631c24588a0c9e271badd61959294848c665d"}
+# https://github.com/BlockstreamResearch/rust-secp256k1-zkp/pull/48/commits and rebased on secp256k1-zkp 0.11.0
+secp256k1-zkp = { git = "https://github.com/dangeross/rust-secp256k1-zkp.git", rev = "57d29b15269ca2ce3c3b118b6a72b66c1169e7b1" }
