--- a/packages/dart/pubspec.yaml
+++ b/packages/dart/pubspec.yaml
@@ -20,9 +20,10 @@ dev_dependencies:
   lints: ">=2.0.0 <=4.0.0"
   path: ^1.9.0
   test: ^1.25.5
+
 dependencies:
   ffi: ^2.1.2
-  flutter_rust_bridge: 2.4.0
+  flutter_rust_bridge: ">=2.4.0 <=2.7.0"
   freezed_annotation: ^2.4.1
   logging: ^1.2.0
   meta: ^1.12.0 # meta is pinned to version 1.12.0 by integration_test from the flutter SDK.
