--- a/.github/workflows/publish-flutter.yml
+++ b/.github/workflows/publish-flutter.yml
@@ -50,7 +50,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: 3.22.3 # Pinned until resource linking issues on Android is resolved with 3.24
+          flutter-version: 3.27.1
 
       - name: Copy package files
         working-directory: dist
