--- a/packages/flutter/ffigen.yaml
+++ b/packages/flutter/ffigen.yaml
@@ -1,9 +1,9 @@
-# Run with `flutter pub run ffigen --config ffigen.yaml`.
+# Run with `dart run ffigen --config ffigen.yaml`.
 name: FlutterBreezLiquidBindings
 description: |
   Bindings for `src/flutter_breez_liquid.h`.
 
-  Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
+  Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
 output: 'lib/flutter_breez_liquid_bindings_generated.dart'
 headers:
   entry-points:
@@ -20,3 +20,5 @@ comments:
   style: any
   length: full
 ignore-source-errors: true
+compiler-opts:
+  - '-Wno-nullability-completeness'
