Fix new clippy warnings

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -33,6 +33,9 @@ version = "0.4.0-rc3"
 [workspace.lints.clippy]
 empty_line_after_doc_comments = "allow"
 
+[workspace.lints.rust]
+unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }
+
 [workspace.dependencies]
 anyhow = "1.0"
 log = "0.4.20"
