Adapt receive swap test

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ packages/flutter/ios/Classes/breez_sdk_liquidFFI.h
 packages/flutter/macos/Classes/breez_sdk_liquidFFI.h
 # Miscellaneous
 .DS_Store
+*.sln
 .idea/
 
 **/target
